1.1 update for Abnormals 1.19.2